--- a/src/components/CountryList/CountryList.module.scss
+++ b/src/components/CountryList/CountryList.module.scss
@@ -1,6 +1,4 @@
 .card {
-  width: calc(33.33% - 20px);
-  margin: 20px 10px;
   padding: 20px;
   background-color: #f2faff;
   border-radius: 5px;
@@ -33,6 +31,19 @@
 }
 
 .list {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-gap: 12px;
+
+  @media (min-width: 576px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media (min-width: 992px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  @media (min-width: 1400px) {
+    grid-template-columns: repeat(5, 1fr);
+  }
 }
